.infrastructure/k8s/manifests/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
## This service will be of type NodePort
  type: NodePort
  ports:
    - port: 5678
      protocol: TCP
  selector:
## Select any PODS (not deployments) with the label
## "pod-name" with the value "backend"
    pod-name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
## Tells we are going to spawn 3 pods for this deployment
  replicas: 3
## Defines how the deployment will know which pods to manage
## in our case, all pods with the label "pod-name"
## with value "backend"
  selector:
    matchLabels:
      pod-name: backend
  template:
    metadata:
      labels:
## Defines the labels of the pods that this
## deployment will create
        pod-name: backend
    spec:
      containers:
        - name: backend
## A testing Docker image - until we have a proper
## image for our application. This image is simple, it
## takes the args we send to it and print it whenever
## we access its root path "/"
          image: hashicorp/http-echo
          args:
## Text to be shown when we access the root path of this
            - "-text=This is where our Backend will be found"
          ports:
## By default the hashicorp/http-echo exposes port 5678
## (this will vary depending on the image we use)
            - containerPort: 5678
